# chiptools

./: .flake8  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .pylintrc  README.md  genindex.html  getting_started.html  index.html  introduction.html  max_hold.html  objects.inv  project_format.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  testing.html  tox.ini
.github/workflows/: ci.yml  coverage.yml
_modules/: index.html
_modules/chiptools/: chiptools_main.html
_sources/: index.rst.txt  introduction.rst.txt
_sources/reference/: chiptools.chiptools_main.rst.txt  chiptools.common.colourer.rst.txt  chiptools.common.exceptions.rst.txt  chiptools.common.filetypes.rst.txt  chiptools.common.rst.txt  chiptools.common.utils.rst.txt  chiptools.core.cache.rst.txt  chiptools.core.cli.rst.txt  chiptools.core.package_builder.rst.txt  chiptools.core.preprocessor.rst.txt  chiptools.core.project.rst.txt  chiptools.core.reporter.rst.txt  chiptools.core.rst.txt  chiptools.parsers.callgraph.rst.txt  chiptools.parsers.options.rst.txt  chiptools.parsers.rst.txt  chiptools.parsers.vhdl.rst.txt  chiptools.parsers.xml_project.rst.txt  (+21 more)
_static/: documentation_options.js
chiptools/: __init__.py  chiptools_main.py
docs/: getting_started.rst  index.rst  max_hold.rst  testing.rst
reference/: chiptools.chiptools_main.html  chiptools.common.colourer.html  chiptools.common.exceptions.html  chiptools.common.filetypes.html  chiptools.common.html  chiptools.common.utils.html  chiptools.core.cache.html  chiptools.core.cli.html  chiptools.core.html  chiptools.core.package_builder.html  chiptools.core.preprocessor.html  chiptools.core.project.html  chiptools.core.reporter.html  chiptools.html  chiptools.parsers.callgraph.html  chiptools.parsers.html  chiptools.parsers.options.html  chiptools.parsers.vhdl.html  chiptools.parsers.xml_project.html  chiptools.testing.custom_runners.HTMLTestRunner.html  chiptools.testing.custom_runners.html  chiptools.testing.html  chiptools.testing.testloader.html  chiptools.wrappers.html  chiptools.wrappers.simulator.html  chiptools.wrappers.simulators.ghdl.html  chiptools.wrappers.simulators.html  chiptools.wrappers.simulators.isim.html  chiptools.wrappers.simulators.iverilog.html  chiptools.wrappers.simulators.modelsim.html  chiptools.wrappers.simulators.vivado.html  chiptools.wrappers.synthesiser.html  chiptools.wrappers.synthesisers.html  chiptools.wrappers.synthesisers.ise.html  chiptools.wrappers.synthesisers.quartus.html  chiptools.wrappers.synthesisers.vivado.html  chiptools.wrappers.toolchains.html  chiptools.wrappers.wrapper.html  modules.html
tests/: test_misc.py  test_project.py
(+69 files in other folders)
