[metadata]
name = chiptools
url = https://github.com/sarnold/chiptools
author = Peter Bennett
author_email = pab850@gmail.com
maintainer = Stephen Arnold
maintainer_email = nerdboy@gentoo.org
description = ChipTools is a utility to automate FPGA build and verification
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache Software License 2.0'
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Programming Language :: Python
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Testing

[options]
python_requires = >= 3.6
install_requires =
zip_safe = False

packages = find:
package_dir =
    =.

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    chiptools = chiptools.chiptools_main:main

[options.extras_require]
doc =
    sphinx
    sphinx_rtd_theme
test =
    nose
    nosexcover
    coverage[toml]
all =
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml
